[gd_scene load_steps=3 format=3 uid="uid://7e8n8dn3htym"]

[ext_resource type="PackedScene" uid="uid://d11eesvpxlsk2" path="res://menus/menu_base.tscn" id="1_gy5bo"]
[ext_resource type="Script" uid="uid://5y5538uv7bti" path="res://menus/menu_audio.gd" id="2_8h6ud"]

[node name="MenuAudio" instance=ExtResource("1_gy5bo")]
theme_override_constants/margin_bottom = 260
script = ExtResource("2_8h6ud")

[node name="Label" parent="Modal/MarginContainer/VBoxContainer" index="0"]
text = "Audio"

[node name="VBoxContainer" type="VBoxContainer" parent="Modal/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Master"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Music"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer" index="2"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "SFX"
horizontal_alignment = 1

[node name="SfxSlider" type="HSlider" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 1.0

[connection signal="value_changed" from="Modal/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Modal/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Modal/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/SfxSlider" to="." method="_on_sfx_slider_value_changed"]

[editable path="Modal"]
